--- a/FishandFishs/nbproject/project.properties
+++ b/FishandFishs/nbproject/project.properties
@@ -33,14 +33,18 @@ dist.jar=${dist.dir}/FishandFishs.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.Desktop-mysql-connector-j-9.1.0=../../../../Desktop/mysql-connector-j-9.1.0
 file.reference.mysql-connector-j-9.0.0.jar=D:\\MysqlConnector\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0\\mysql-connector-j-9.0.0.jar
+file.reference.mysql-connector-j-9.1.0.jar=../../../../Desktop/mysql-connector-j-9.1.0/mysql-connector-j-9.1.0.jar
 includes=**
 # Non-JavaFX jar file creation is deactivated in JavaFX 2.0+ projects
 jar.archive.disabled=true
 jar.compress=false
 javac.classpath=\
     ${javafx.classpath.extension}:\
-    ${file.reference.mysql-connector-j-9.0.0.jar}
+    ${file.reference.mysql-connector-j-9.0.0.jar}:\
+    ${file.reference.Desktop-mysql-connector-j-9.1.0}:\
+    ${file.reference.mysql-connector-j-9.1.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
